--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <a id="forkme_banner" href="{{ site.github.owner_url }}">Find me on github! </a>
+    <!--a id="forkme_banner" href="{{ site.github.repository_url }}">Fork me on github!</a-->
     <div class="shell">
 
       <header>
