--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,8 +70,8 @@
           <span class="left-tail"></span>
           <span class="right-tail"></span>
         </span>
-        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
+        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using the Merlot theme</p>
+        <!--span class="octocat"></span-->
       </footer>
 
     </div>
